--- a/awesome.org
+++ b/awesome.org
@@ -1,3 +1,4 @@
+
 * Sigil Meanings
 
 | ▪ | sticky          |
@@ -5,6 +6,12 @@
 | ⇔ | maximized horiz |
 | ⇳ | max vert        |
 | ‸ | on top          |
+
+* Two monitors
+
+mod key + 
+| o   | focus_relative | put focus on other screen            |
+| S-o | move_to_screen | move current window to other monitor |
 
 * Basics
 
